--- a/gym/src/App.css
+++ b/gym/src/App.css
@@ -1,1 +1,39 @@
 
+::-webkit-scrollbar {
+  display: none;
+}
+
+.navbar{
+  padding: 1rem;
+  background: rgb(56, 49, 49);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.navbar .logo a{
+  text-decoration: none;
+  font-size: 24px;
+  color: rgb(255, 217, 0);
+}
+
+
+
+
+.navbar .links a{
+  color: white;
+  text-decoration: none;
+  margin-right: 2rem;
+  padding: 5px 10px;
+  transition: all 0.1s ease-in;
+}
+
+.navbar .links a:hover{
+  color: rgb(124, 117, 117);
+
+}
+
+.navbar .links .active{
+  color: black !important;
+  background-color: orange;
+}
