--- a/gym/src/index.css
+++ b/gym/src/index.css
@@ -1,1 +1,10 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Orbitron&family=Raleway&display=swap');
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  /* font-family: 'Orbitron', sans-serif; */
+  font-family: 'Raleway', sans-serif;
+}
