--- a/gym/src/Layouts/ExcerciseLayout.css
+++ b/gym/src/Layouts/ExcerciseLayout.css
@@ -1,5 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Karla&display=swap');
 
+.class-title{
+    width: 100%;
+    padding: 2.1rem;
+    text-align: center;
+    margin-bottom: 1rem;
+    background-image:linear-gradient(to bottom, rgba(58, 59, 60, 0.52), rgba(0, 0, 0, 0.73)),url('../images/bg2.jpg');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.class-title h1{
+    text-transform: uppercase;
+    font-family: 'Orbitron', sans-serif;
+    font-size: 4rem;
+    color: gray;
+}
+
+
 .gym{
     margin: 4rem;
     display: flex;
