--- a/gym/src/Layouts/Help.css
+++ b/gym/src/Layouts/Help.css
@@ -1,15 +1,28 @@
+@import url('https://fonts.googleapis.com/css2?family=Orbitron&display=swap');
 
 .help{
     width: 100%;
-    padding-top: 10px;
+    padding: 3rem;
     text-align: center;
+    margin-bottom: 1rem;
+    background-image:linear-gradient(to bottom, rgba(58, 59, 60, 0.52), rgba(0, 0, 0, 0.73)),url('../images/bg.jpg');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 .help h2 {
     text-transform: uppercase;
-    margin-bottom: 1rem;
+    font-family: 'Orbitron', sans-serif;
+    font-size: 4rem;
+    color: gray;
 }
 
-.help a{
+.help-links{
+    padding: 1rem;
+    text-align: center;
+}
+
+.help-links a{
     text-decoration: none;
     margin-right: 2rem;
     background-color: white;
@@ -18,14 +31,16 @@
     color: orange;
     border: 1px solid orange;
     transition: all .2s ease-in-out;
+
 }
 
-.help a:hover{
+
+.help-links a:hover{
     background: orange;
     color: black;
 }
 
-.help .active{
+.help-links .active{
     background: orange;
     color: black;
 }
