--- a/gym/src/pages/About.css
+++ b/gym/src/pages/About.css
@@ -1,15 +1,19 @@
 
 .about-title{
-    padding: 2rem;
+    padding: 4rem;
     width: 100%;
-    background: rgb(93,90,96);
-    background: linear-gradient(302deg, rgba(93,90,96,1) 26%, rgba(20,18,18,1) 87%);
+    background-image:linear-gradient(to bottom, rgba(58, 59, 60, 0.52), rgba(0, 0, 0, 0.73)),url('../images/bg3.jpg');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .about-title h1{
-    text-align: center;
     text-transform: uppercase;
-    color: white;
+    font-family: 'Orbitron', sans-serif;
+    font-size: 4rem;
+    color: gray;
+    text-align: center;
 }
 
 .about{
