--- a/gym/src/pages/Help/contact.css
+++ b/gym/src/pages/Help/contact.css
@@ -1,7 +1,7 @@
 
 
 .main{
-    margin: 6%;
+    margin: 8%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -14,8 +14,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 500px;
-    height: 530px;
+    width: 580px;
+    height: 580px;
     border-radius: 5px;
 }
 
@@ -28,11 +28,13 @@
     text-align: center;
     color: white;
     font-size: 15px;
-    padding-top: 8px;
+    padding: 0 1rem ;
+    padding-top: 8px !important;
 }
 
 .main .conatct form{
     margin-top: 3rem;
+    width: 400px;
     margin-bottom: 2rem;
 }
 
@@ -54,6 +56,7 @@
     margin-bottom: 1.5rem;
     padding: 10px;
     border-radius: 5px;
+    width: 100%;
 }
 
 .main .conatct form button{
