--- a/gym/src/pages/Login.css
+++ b/gym/src/pages/Login.css
@@ -1,11 +1,29 @@
 
+.login-title{
+    width: 100%;
+    padding: 2.1rem;
+    text-align: center;
+    margin-bottom: 1rem;
+    background-image:linear-gradient(to bottom, rgba(58, 59, 60, 0.52), rgba(0, 0, 0, 0.73)),url('../images/bg.jpg');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.login-title h1{
+    text-transform: uppercase;
+    font-family: 'Orbitron', sans-serif;
+    font-size: 4rem;
+    color: gray;
+}
+
 .container{
     width: 90%;
     height: 70vh;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 3rem;
+    margin: 1.5rem;
 
 }
 
@@ -46,25 +64,25 @@
 
 .container .login i{
     background-color: white;
-    padding-top : 0.45rem;
+    padding-top : 0.58rem;
     padding-right: 0.5rem;
     padding-left: 0.6rem;
-    padding-bottom: 0.65rem;
+    padding-bottom: 0.8rem;
     justify-items: center;
 }
 
 .lock{
     margin-top: 4px;
-    padding-top: 0.54rem !important;
-    padding-bottom: 0.6rem !important;
-    width: 235px;
+    padding-top: 0.55rem !important; 
+    width: 220px;
     border: none;
     outline: none;
-    margin-bottom: 2rem;
+    
 }
 
 .container .login button{
     width: 255px;
+    margin-top: 2rem;
     border: 2px soild orange;
     padding: 9px;
     font-size: 1.2rem;
@@ -89,6 +107,7 @@
 .container .social h3{
     font-size: 13px;
     color: white;
+    margin-top: 1rem;
     margin-bottom: 1rem;
 }
 
