--- a/ecommerce/src/index.css
+++ b/ecommerce/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Ephesis&family=Kanit&family=Whisper&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -6,4 +7,12 @@
   body {
     @apply font-primary text-primary;
   }
+}
+
+.web-name{
+  font-family: 'Ephesis', cursive;
+  /* font-family: 'Whisper', cursive; 
+  text-transform: uppercase; */
+  font-weight: 900;
+  font-size: 2.3rem;
 }
