--- a/faceverse/client/src/index.css
+++ b/faceverse/client/src/index.css
@@ -1,7 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Orbitron&family=Rubik:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Beau+Rivage&family=Italianno&family=Orbitron&family=Roboto+Condensed&family=Rubik:wght@400;500;700&family=Whisper&display=swap');
 
 html,body,#root,.app{
     height: 100%;
     width: 100%;
     font-family: 'Rubik', sans-serif;
+}
+
+.logo{
+    color: #00D5FA;
+    font-weight: 500;
 }
