--- a/chat-app/client/src/index.css
+++ b/chat-app/client/src/index.css
@@ -2,3 +2,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+::-webkit-scrollbar{
+    width: 4px;
+}
+
+::-webkit-scrollbar-track{
+    background: #f5f5f5;
+}
+
+::-webkit-scrollbar-thumb{
+    border-radius: 5px;
+    background: rgb(136, 172, 220);
+}
+
+::-webkit-scrollbar-thumb:hover{
+    background: #242424;
+}
